--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ bylaws.pdf
 membership.pdf
 publications.pdf
 key_science_topics_proposals.pdf
+bylaws_v1.5_DRAFT.pdf
+bylaws_v1.5_DRAFT.tex
+bylaws_v1.6.pdf
