--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ key_science_topics_proposals.pdf
 bylaws_v1.5_DRAFT.pdf
 bylaws_v1.5_DRAFT.tex
 bylaws_v1.6.pdf
+bylaws_v1.6_draft.pdf
+bylaws_v1.5.pdf
+bylaws_v1.6_prior_to_1p5_approval.pdf
+bylaws_v1.6_prior_to_1p5_approval.tex
