Revert "Merge branch 'master' of https://github.com/CMB-S4/Governance"
Updating bylaws with CoC amendment pulled out

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ bylaws_v1.6_draft.pdf
 bylaws_v1.5.pdf
 bylaws_v1.6_prior_to_1p5_approval.pdf
 bylaws_v1.6_prior_to_1p5_approval.tex
+bylaws_v1.78910.pdf
